Branch cleanup: drop integration notes, rewrite README, land reproduction harnesses
The four INTEGRATION_NOTES*.md files were per-round work logs from the Java-21
port (Gaps 3/4 bytecode, Gap 6 thread safety, Gap 7 jlink, DaCapo tuning). They
documented the path to the current state; that state is now in code and in
BENCHMARK.md. Keeping them was just noise for new readers.

README.md was the original Java-8 era text — Travis CI, Java 8 required, an API
(`-agentpath:target/libtagging.so -javaagent:target/CRIJ-0.0.1-SNAPSHOT.jar
-Xbootclasspath/p:...`) that no longer exists. Replaced with a Java-21-first
orientation covering requirements, build, the three attachment modes
(plain agent on instrumented JDK; + optional JVMTI native for stack roots;
baked jlink image for packaging), and a reproduction table that maps each
experimental claim to a runnable harness.

eval/ is new. Previously the microbench harness lived under
.claude/worktrees/agent-adab3790/eval/microbench and the DaCapo harnesses
under /tmp/crochet-bench and /tmp/dacapo-func — fine for one machine, useless
for a reviewer. Moved all three into the repo, made them self-contained
(repo-relative paths by default, env-var overrides for AGENT_JAR / JDK_INST /
DACAPO_JAR / BASE_JDK / RUNS), and stripped the stale hardcoded /home/jon and
commit-SHA references. No behavior change to the measurements they produce.

CLAUDE.md: fix demo count (17 -> 21), test count (5 -> 35), drop the dangling
INTEGRATION_NOTES* cross-references, add eval/ to the directory tour.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>